# ros2-workspace

./: .gitignore
src/face_recognition_pkg/: package.xml  setup.py
src/face_recognition_pkg/face_recognition_pkg/: face_detection_client.py  face_detection_server.py
src/face_recognition_pkg/launch/: face_recognition_launch.py
src/system_status_monitoring/: package.xml  setup.cfg  setup.py
src/system_status_monitoring/launch/: system_status_monitor.launch.py
src/system_status_monitoring/system_status_monitoring/: system_status_publisher.py  system_status_subscriber.py
src/zack_interfaces/: CMakeLists.txt  package.xml
src/zack_interfaces/msg/: SystemStatus.msg
src/zack_interfaces/srv/: FaceDetection.srv
